# minui-manager

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  make.ps1  minui-game-manager-plan.md  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  paths.py  systems.yaml
backend/app/routers/: archive.py  boxart.py  library.py  sdcard.py  settings.py
backend/app/services/: archive_store.py  boxart_libretro.py  boxart_steamgriddb.py  folder_picker.py  image_processor.py  library_backup.py  library_store.py  sdcard_reader.py  sdcard_remover.py  sdcard_sync.py  sdcard_validator.py  sdcard_writer.py  system_detector.py  system_registry.py
backend/tests/: conftest.py  test_archive_roundtrip.py  test_boxart_libretro.py  test_boxart_router.py  test_boxart_steamgriddb.py  test_folder_picker.py  test_image_processor.py  test_library_backup.py  test_library_router.py  test_library_store.py  test_multi_disk.py  test_sdcard_import.py  test_sdcard_reader.py  test_sdcard_remover.py  test_sdcard_router.py  test_sdcard_sync.py  test_sdcard_validator.py  test_sdcard_writer.py  test_settings.py  test_system_detector.py  test_system_registry.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/app/services/: archive.service.ts  boxart.service.ts  drop-folder.util.ts  library.service.ts  sdcard.service.ts  settings.service.ts
scripts/: seed_dev_sd.py
(+9 files in other folders)
